The original idea was not working as designed (double scroll bar fix messes up background picture resizing to wondow size) and looks kind of off. This is the latest progress of this version.

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,9 +1,3 @@
-/* Make page fit in window size */
-html,body {
-    width: 100%;
-    height: 100%;
-}
-
 /* Make the nav bar a box (not with rounded edges) */
 .navbar {
     margin-bottom: 0px;
@@ -18,18 +12,17 @@ html,body {
 
 }
 
-
 /* Modify Jumbotron */
-
 .jumbotron {
     height: 100%;
-    position: relative;
-    background: #000 url("../images/bg_home/forest_path_osaka.jpg") no-repeat center center;
     width: 100%;
-    height: 100%; 
+    position: relative;
+    background: url("../images/bg_home/forest_path_osaka.jpg") no-repeat center center;
     background-size: cover;
-    overflow: scroll; /* When content can't fit on screen, makes it scrollable to see it */
     margin: 0;
+    padding-bottom: 0px;
+    padding-top: 0px;
+    overflow: hidden;
 }
 
 /* Keep the header text size in relation to view point of window */
@@ -37,4 +30,8 @@ html,body {
 .jumbotron h1, h2 {
     color: white;
     font-size: 5vmax;
+}
+
+.container {
+    overflow: auto;
 }
